# mkdocs-plugin

./: .gitignore  README.md  entangled.dhall  entangled.toml  mkdocs.yml  pyproject.toml
.entangled/: filedb.json
.github/workflows/: deploy-pages.yaml  python-package.yml  python-publish.yml
docs/: index.md  setup.md
examples/: entangled.toml  hello_world.py  lua-session.json  lua-session.out.json  plot.gp
mkdocs_entangled/: __init__.py  config.py  mawk.py  on_page_markdown.py  plugin.py
test/: test_properties.py
