[tool.poetry]
name = "mkdocs-entangled-plugin"
version = "0.3.0"
description = "Plugin for MkDocs helping with rendering Entangled (entangled.github.io) projects."
readme = "README.md"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache 2.0"
packages = [
    { include = "mkdocs_entangled" }
]

[tool.poetry.plugins."mkdocs.plugins"]
entangled = "mkdocs_entangled:EntangledPlugin"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
entangled-cli = "^2.0.0a6"
mawk = "^0.1.4"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-mypy = "^0.10.3"
mkdocs-material = "^9.1.6"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--mypy"]
testpaths = [
    "test"
]

[tool.mypy]
packages = ["mkdocs_entangled"]
